# Gray_Scott

./: .gitignore  README.md
CPU/: Makefile  main.c  simulation.c.old
CPU/C/: Makefile  main.c
CPU/C++/: CMakeLists.txt  colormap.h  renderer.hpp  simulation.cpp  tile.hpp
CPU/C/include/: constants.h  logs.h  simulation.h
CPU/C/script/: colormap.h  generate_colormap.py
CPU/C/src/: renderer.c  simulation.c
CPU/include/: cli_handler.h  constants.h  renderer.h  simulation.h  types.h
CPU/src/: cli_handler.c  renderer.c  simulation.c
